[gd_scene load_steps=2 format=3 uid="uid://di107vwst8ws6"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_jy3yw"]

[node name="Node2D" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_jy3yw")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 50
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="new_game" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "new game"

[node name="continue" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "continue"

[node name="exit" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "exit"

[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer/new_game" to="." method="_on_re_start_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer/continue" to="." method="_on_start_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer/exit" to="." method="_on_exit_pressed"]
